--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -169,7 +169,7 @@ tinymce.init({
 });
 ----
 
-.After refactor using promises
+.New expected value returning a Promise
 [source,js]
 ----
 tinymce.init({
