--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -205,9 +205,7 @@ In {productname} 7.0 the below plugin has been removed.
 
 The open-source `Template` plugin and associated config options have been removed in {productname} 7.0.
 
-Customers using the `template` plugin need to migrate to the premium `advtemplate` which contains all the functionality except some esoteric options.
-
-This plugin has been replaced with the **Advanced Template** plugin, see: xref:advanced-templates.adoc[Advanced Template] for more details.
+Customers using the `template` plugin are recommended to upgrade to the premium **Templates** plugin which provides enhanced template functionality. For more information on the **Templates** plugin, see: xref:advanced-templates.adoc[Templates] for more details.
 
 [IMPORTANT]
 For customers using the `template` plugin and are looking to migrate to the premium `advtemplate` plugin which contains all the functionality except some specific options which are noted below.
