--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -207,10 +207,7 @@ The open-source `Template` plugin and associated config options have been remove
 
 Customers using the `template` plugin are recommended to upgrade to the premium **Templates** plugin which provides enhanced template functionality. For more information on the **Templates** plugin, see: xref:advanced-templates.adoc[Templates] for more details.
 
-[IMPORTANT]
-For customers using the `template` plugin and are looking to migrate to the premium `advtemplate` plugin which contains all the functionality except some specific options which are noted below.
-
-Options not available in **Advanced Template** plugin
+Removed **Template** options:
     
 * `template_cdate_classes`
 * `template_cdate_format`
