--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -158,7 +158,7 @@ tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: 'media',
   toolbar: 'media',
-  media_url_resolver: (data, resolve/*, reject*/) => {
+  media_url_resolver: (data, resolve, reject) => {
     if (data.url.indexOf('YOUR_SPECIAL_VIDEO_URL') !== -1) {
       const embedHtml = `<iframe src="${data.url}" width="400" height="400" ></iframe>`;
       resolve({ html: embedHtml });
