DOC-2244: TinyMCE 6 to 7 `migration guide`. (#3066)
* DOC-2244: Initial outline for TinyMCE 6 to 7 migration guide.

* DOC-2244: updates to migration guide for new breaking changes.

* Update modules/ROOT/pages/migration-from-6x.adoc

* DOC-2244: copy edits, changes added anchors.

* DOC-2244: removal of Renaming of inconsistent CSS file name changes from migration guide.

* Update modules/ROOT/pages/migration-from-6x.adoc

* Update modules/ROOT/pages/migration-from-6x.adoc

* Update modules/ROOT/pages/migration-from-6x.adoc

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: Daniel Oakman <141111365+danoaky-tiny@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: Farzad Hayat <farzad.hayatbakhsh@tiny.cloud>

* Update modules/ROOT/pages/migration-from-6x.adoc

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: spocke <spocke@moxiecode.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

* DOC-2244: updates, fixing sidebar level nesting and links.

* DOC-2244: update level heading.

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

Co-authored-by: ltrouton <46954949+ltrouton@users.noreply.github.com>

* Update modules/ROOT/pages/migration-from-6x.adoc

* DOC-2244: update structure, and formatting.

* DOC-2244: update d

--- a/modules/ROOT/partials/configuration/text_patterns.adoc
+++ b/modules/ROOT/partials/configuration/text_patterns.adoc
@@ -21,24 +21,20 @@ The default value for this option was changed with {productname} 7.0, see more x
 *Default value:*
 [source,js]
 ----
-[
-  // Inline text patterns
+default: [
   { start: '*', end: '*', format: 'italic' },
   { start: '**', end: '**', format: 'bold' },
-  // Headings
   { start: '#', format: 'h1', trigger: 'space' },
   { start: '##', format: 'h2', trigger: 'space' },
   { start: '###', format: 'h3', trigger: 'space' },
   { start: '####', format: 'h4', trigger: 'space' },
   { start: '#####', format: 'h5', trigger: 'space' },
   { start: '######', format: 'h6', trigger: 'space' },
-  // The following text patterns require the `lists` plugin
   { start: '1.', cmd: 'InsertOrderedList', trigger: 'space' },
   { start: '*', cmd: 'InsertUnorderedList', trigger: 'space' },
   { start: '-', cmd: 'InsertUnorderedList', trigger: 'space' },
-  // Other
   { start: '>', cmd: 'mceBlockQuote', trigger: 'space' },
-  { start: '---', cmd: 'InsertHorizontalRule', trigger: 'space' },
+  { start: '---', cmd: 'InsertHorizontalRule', trigger: 'space' }
 ]
 ----
 [TIP]
@@ -89,7 +85,7 @@ Block patterns must have the following:
 
 The block patterns do not have an `+end+` property. This allows for patterns to be used to either apply a block format or execute a command, optionally, with the given value.
 
-NOTE: Block patterns can be configured to be executed on either *Enter*, or by pressing *Space*.
+NOTE: Block patterns are executed on *Spacebar* by default, but can be configured to be executed on *Enter*.
 
 ==== Example: using block patterns
 
